<resources>
    <string name="app_name">Movies App</string>
    <string name="sign_in_to_moviesapp">Sign In to MoviesApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="more">More</string>
    <string name="welcome">Welcome:</string>
    <string name="movie_name">Movie Name</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="rating">rating</string>
</resources>